added bourbon neat and flat-ui

--- a/index.html
+++ b/index.html
@@ -1,9 +1,59 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-	<title>DUCKSAUCE</title>
+  <title>DUCKSAUCE</title>
+  <link href="stylesheets/style.css" rel="stylesheet">
 </head>
 <body>
-
+  <nav class="nav"></nav>
+  <section class="slider">
+    <section class="place list">
+    </section>
+    <section class="place detail">
+    </section>
+  </section>
+  <section class="action">
+      <a href="#" class="btn btn-large btn-block">Utility Action</a>
+      <a href="#" class="btn btn-large btn-block btn-primary">Primary Action</a>
+      <div class="container">
+              <div class="row demo-row">
+        <div class="span3">
+          <a href="#fakelink" class="btn btn-large btn-block btn-primary">Primary Button</a>
+        </div>
+        <div class="span3">
+          <a href="#fakelink" class="btn btn-large btn-block btn-warning">Warning Button</a>
+        </div>
+        <div class="span3">
+          <a href="#fakelink" class="btn btn-block btn-large">Default Button</a>
+        </div>
+        <div class="span3">
+          <a href="#fakelink" class="btn btn-large btn-block btn-danger">Danger Button</a>
+        </div>
+      </div>
+      </div>
+  </section>
+  <section class="input">
+    <input type="text" value="" placeholder="email">
+    <div>
+      <label class="checkbox" for="checkbox1">
+        <span class="icons">
+          <span class="first-icon fui-checkbox-unchecked"></span>
+          <span class="second-icon fui-checkbox-checked"></span>
+        </span>
+        <input type="checkbox" value="" id="checkbox1" data-toggle="checkbox">
+        Checkbox Option
+      </label>
+    </div>
+    <div>
+      <label class="radio">
+        <span class="icons">
+          <span class="first-icon fui-radio-unchecked"></span>
+          <span class="second-icon fui-radio-checked"></span>
+        </span>
+        <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" data-toggle="radio">
+            Radio Option
+      </label>
+    </div>
+  </section>
 </body>
 </html>
