--- a/index.html
+++ b/index.html
@@ -3,57 +3,98 @@
 <head>
   <title>DUCKSAUCE</title>
   <link href="stylesheets/style.css" rel="stylesheet">
+
 </head>
 <body>
-  <nav class="nav"></nav>
-  <section class="slider">
-    <section class="place list">
-    </section>
-    <section class="place detail">
-    </section>
+  <section class="header example">
+    <h1>Headers</h1>
+    <nav class="nav"></nav>
   </section>
-  <section class="action">
-      <a href="#" class="btn btn-large btn-block">Utility Action</a>
-      <a href="#" class="btn btn-large btn-block btn-primary">Primary Action</a>
-      <div class="container">
-              <div class="row demo-row">
-        <div class="span3">
-          <a href="#fakelink" class="btn btn-large btn-block btn-primary">Primary Button</a>
+  <section class="places example">
+    <h1>Places</h1>
+    <section id="place-list">
+      <div class="place">
+        <img src="http://fakeimg.pl/120/">
+        <span class="blurb">
+          <h1>Placeholder</h1>
+          <p>Lorem ipsum doloremque zheme zai nar too much to drink last night?  Don't be too proud of this technological terror you've constructed. The ability to destroy a planet is insignificant next to the power of the Force. But with the blast shield down, I can't even see! How am I supposed to fight?</p>
+        </span>
+      </div>
+    </section>
+    <section id="place-boxes">
+      <div class="place-box">
+        <div class="place" data-toggle="collapse" data-target="#demo-place">
+          <img src="http://fakeimg.pl/120/">
+          <span class="blurb">
+            <h1>Placeholder</h1>
+            <p>Lorem ipsum doloremque zheme zai nar too much to drink last night?  Don't be too proud of this technological terror you've constructed.</p>
+          </span>
         </div>
-        <div class="span3">
-          <a href="#fakelink" class="btn btn-large btn-block btn-warning">Warning Button</a>
-        </div>
-        <div class="span3">
-          <a href="#fakelink" class="btn btn-block btn-large">Default Button</a>
-        </div>
-        <div class="span3">
-          <a href="#fakelink" class="btn btn-large btn-block btn-danger">Danger Button</a>
+        <div class="place-detail collapse" id="demo-place">
+          <div class="actions">
+            <h3>More Info</h3>
+            <ul>
+              <li>that enhances clarity and allows the content and its message </li>
+              <li>Once upon a midnight dreary, while I struggled with JQuery,</li>
+              <li>Sighing softly, weak and weary, troubled by my daunting chore,</li>
+              <li>While I grappled with weak mapping, suddenly a function wrapping</li>
+            </ul>
+          </div>
+          <div id="map">
+          </div>
         </div>
       </div>
-      </div>
+    </section>
   </section>
-  <section class="input">
-    <input type="text" value="" placeholder="email">
-    <div>
+  <section class="action example">
+    <h1>Actions</h1>
+    <span id="utility-button"><button class="utility-example">Utility Action</button></span>
+    <span id="action-button"><button class="action-example"><b>Primary Action</b></button></span>
+  </section>
+  <section class="input example">
+    <h1>Inputs</h1>
+    <span id="text"><input type="email" placeholder="email" class="email-example"></span>
+    <div id="checkbox">
       <label class="checkbox" for="checkbox1">
         <span class="icons">
           <span class="first-icon fui-checkbox-unchecked"></span>
           <span class="second-icon fui-checkbox-checked"></span>
         </span>
         <input type="checkbox" value="" id="checkbox1" data-toggle="checkbox">
-        Checkbox Option
+        Checkbox Option 1
+      </label>
+      <label class="checkbox" for="checkbox2">
+        <span class="icons">
+          <span class="first-icon fui-checkbox-unchecked"></span>
+          <span class="second-icon fui-checkbox-checked"></span>
+        </span>
+        <input type="checkbox" value="" id="checkbox2" data-toggle="checkbox">
+        Checkbox Option 2
       </label>
     </div>
-    <div>
+    <div id="radio">
       <label class="radio">
         <span class="icons">
           <span class="first-icon fui-radio-unchecked"></span>
           <span class="second-icon fui-radio-checked"></span>
         </span>
         <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" data-toggle="radio">
-            Radio Option
+            Radio Option 1
+      </label>
+      <label class="radio">
+        <span class="icons">
+          <span class="first-icon fui-radio-unchecked"></span>
+          <span class="second-icon fui-radio-checked"></span>
+        </span>
+        <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" data-toggle="radio">
+            Radio Option 2
       </label>
     </div>
   </section>
+  <script src="js/jquery-1.8.2.min.js"></script>
+  <script src="js/bootstrap-dropdown.js"></script>
+  <script src="js/html5shiv.js"></script>
+  <script src="js/custom_radio.js"></script>
+  <script src="js/custom_checkbox_and_radio.js"></script>
 </body>
 </html>
