added logo to nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navbar-inner">
           <div class="container">
             <ul class="nav">
-              <li id="logo"></li>
+              <li><a href="#" id="logo"></a></li>
               <li class="active" id="title"><a href="/">Captain Planner</a>
                 <span class="navbar-unread">beta!</span>
               </li>
@@ -35,7 +35,7 @@
         <div class="navbar-inner">
           <div class="container">
             <ul class="nav">
-              <li id="logo"></li>
+              <li><a href="#" id="logo"></a></li>
               <li class="active" id="title"><a href="/">Captain Planner</a>
                 <span class="navbar-unread">beta!</span>
               </li>
